Fix for NWRCA-103.